[gd_scene load_steps=3 format=1]

[ext_resource path="res://images/menu_background.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=2]

[node name="Root" type="Sprite"]

transform/pos = Vector2( 963.526, 541.421 )
transform/scale = Vector2( 0.999807, 0.844672 )
texture = ExtResource( 1 )
script/script = ExtResource( 2 )

[node name="MainMenu" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -696.0
margin/top = -500.0
margin/right = -200.0
margin/bottom = 500.0

[node name="PlayButton" type="Button" parent="MainMenu"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
size_flags/stretch_ratio = 0.0
margin/left = 0.0
margin/top = 50.0
margin/right = 100.0
margin/bottom = 70.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false
align = 0

[node name="OptionsButton" type="Button" parent="MainMenu/PlayButton"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 233.0
margin/right = 0.0
margin/bottom = 253.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false
align = 0

[node name="QuitButton" type="Button" parent="MainMenu/PlayButton"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 283.0
margin/right = 0.0
margin/bottom = 303.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false
align = 0

[node name="ProjectInfos" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="ProjectNameLabel" type="Label" parent="ProjectInfos"]

anchor/left = 1
anchor/top = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -679.0
margin/top = -540.0
margin/right = 823.0
margin/bottom = 594.0
text = "[PROJECT_NAME]"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ProjectVersion" type="Label" parent="ProjectInfos/ProjectNameLabel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 120.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
text = "[REVISION]"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PlayMenu" type="Container" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -872.0
margin/top = -540.0
margin/right = 872.0
margin/bottom = 540.0

[node name="PlayPanel" type="Panel" parent="PlayMenu"]

visibility/opacity = 0.78
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 0.0

[node name="NewGameButton" type="Button" parent="PlayMenu/PlayPanel"]

anchor/top = 1
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 100.0
margin/right = 179.0
margin/bottom = 1004.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "New game"
flat = false

[node name="PlayBackButton" type="Button" parent="PlayMenu/PlayPanel/NewGameButton"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 372.0
margin/top = 0.0
margin/right = 412.0
margin/bottom = 20.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="SaveList" type="ItemList" parent="PlayMenu/PlayPanel"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 50.0
margin/right = 844.0
margin/bottom = 950.0

[node name="SaveDetailsPanel" type="Panel" parent="PlayMenu/PlayPanel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 650.0
margin/top = 50.0
margin/right = 50.0
margin/bottom = 450.0

[node name="LoadGameButton" type="Button" parent="PlayMenu/PlayPanel/SaveDetailsPanel"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = 650.0
margin/right = 301.0
margin/bottom = 670.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load game"
flat = false

[node name="RemoveGameButton" type="Button" parent="PlayMenu/PlayPanel/SaveDetailsPanel/LoadGameButton"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 0.0
margin/right = 164.0
margin/bottom = 20.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Remove"
flat = false

[connection signal="released" from="MainMenu/PlayButton" to="." method="_on_PlayButton_released"]

[connection signal="pressed" from="MainMenu/PlayButton/OptionsButton" to="." method="_on_OptionsButton_pressed"]

[connection signal="released" from="MainMenu/PlayButton/OptionsButton" to="." method="_on_OptionsButton_released"]

[connection signal="released" from="MainMenu/PlayButton/QuitButton" to="." method="_on_QuitButton_released"]

[connection signal="released" from="PlayMenu/PlayPanel/NewGameButton" to="." method="_on_NewGameButton_released"]

[connection signal="released" from="PlayMenu/PlayPanel/NewGameButton/PlayBackButton" to="." method="_on_PlayBackButton_released"]


